--- a/app/_components/products/similar-products/SimilarProducts.module.css
+++ b/app/_components/products/similar-products/SimilarProducts.module.css
@@ -1,5 +1,5 @@
 .similarProducts {
-  padding: 1.6rem 0 8.8rem;
+  padding: 8rem 0 12rem;
   background-color: var(--color-gray-light);
 }
 
@@ -10,7 +10,7 @@
 
 @media screen and (min-width: 768px) {
   .similarProducts {
-    padding: 6.4rem 0 10.4rem;
+    padding: 10.4rem 0 12rem;
   }
 
   .similarProducts h2 {
